--- a/Tema 1/tema1/EJ17.html
+++ b/Tema 1/tema1/EJ17.html
@@ -26,7 +26,7 @@
     <!-- Producto 1 -->
     <tr>
         <td align="center">
-            <img src="Tema 1/tema1/imgs/portatil.png" alt="Imagen portátil" width="80">
+            <img src="https://github.com/AlezZ743/LLMM/blob/main/Tema%201/tema1/imgs/portatil.png?raw=true" alt="Imagen portátil" width="80">
         </td>
         <td>
             <strong>Portátil - 3 GHz - 4 GB RAM</strong><br>
@@ -38,7 +38,7 @@
     <!-- Producto 2 -->
     <tr>
         <td align="center">
-            <img src="Tema 1/tema1/imgs/videocamara.png" width="80">
+            <img src="https://github.com/AlezZ743/LLMM/blob/main/Tema%201/tema1/imgs/videocamara.png?raw=true" width="80">
         </td>
         <td>
             <strong>Videocámara - Alta definición 1080p - 60 GB</strong><br>
@@ -50,7 +50,7 @@
     <!-- Producto 3 -->
     <tr>
         <td align="center">
-            <img src="Tema 1/tema1/imgs/tv.png" alt="Imagen televisor" width="80">
+            <img src="https://github.com/AlezZ743/LLMM/blob/main/Tema%201/tema1/imgs/tv.png?raw=true" alt="Imagen televisor" width="80">
         </td>
         <td>
             <strong>Televisor - 46'' - Full HD</strong><br>
@@ -62,7 +62,7 @@
     <!-- Producto 4 -->
     <tr>
         <td align="center">
-            <img src="Tema 1/tema1/imgs/movil.png" alt="Imagen móvil" width="80">
+            <img src="https://github.com/AlezZ743/LLMM/blob/main/Tema%201/tema1/imgs/movil.png?raw=true" alt="Imagen móvil" width="80">
         </td>
         <td>
             <strong>Móvil - 3G - Wi-Fi - 8 GB</strong><br>
