--- a/ProyectoBootstrap/index.html
+++ b/ProyectoBootstrap/index.html
@@ -30,15 +30,15 @@
     <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/perro1.jpg" class="d-block w-100" alt="Perro">
+                <img src="img/perro.jpg" class="d-block w-100" alt="Perro">
                 <div class="carousel-caption"><h3>Adopta un amigo</h3></div>
             </div>
             <div class="carousel-item">
-                <img src="img/gato1.jpg" class="d-block w-100" alt="Gato">
+                <img src="img/gato.jpg" class="d-block w-100" alt="Gato">
                 <div class="carousel-caption"><h3>Compañeros leales</h3></div>
             </div>
             <div class="carousel-item">
-                <img src="img/pajaro1.jpg" class="d-block w-100" alt="Pájaro">
+                <img src="img/pajaro.jpg" class="d-block w-100" alt="Pájaro">
                 <div class="carousel-caption"><h3>Cuidados especiales</h3></div>
             </div>
         </div>
