--- a/ProyectoBootstrap/cuidados.html
+++ b/ProyectoBootstrap/cuidados.html
@@ -1,13 +1,107 @@
-<table class="table table-striped mt-4">
-    <thead class="table-dark">
-        <tr>
-            <th>Mascota</th>
-            <th>Vacuna</th>
-            <th>Frecuencia</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr><td>Perro</td><td>Polivalente</td><td>Anual</td></tr>
-        <tr><td>Gato</td><td>Trivalente</td><td>Anual</td></tr>
-    </tbody>
-</table>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mascotas VIP - Cuidados</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/estilos.css">
+</head>
+<body style="background-color: #faf9f6;">
+
+    <nav class="navbar navbar-expand-lg navbar-light shadow-sm" style="background-color: #bde0fe;">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">🐾 Mascotas VIP</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="perros.html">Perros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gatos.html">Gatos</a></li>
+                    <li class="nav-item"><a class="nav-link active fw-bold" href="cuidados.html">Cuidados</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <main class="container my-5 fade-in">
+        <div class="text-center mb-5">
+            <h1 class="display-4 fw-bold" style="color: #555;">Guía de Cuidados</h1>
+            <p class="lead">Mantener a tu mascota sana es una responsabilidad diaria. Aquí tienes un resumen básico.</p>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-lg-10">
+                <div class="card shadow-sm border-0 rounded-4 overflow-hidden">
+                    <div class="card-header border-0 text-center py-3" style="background-color: #cdb4db; color: white;">
+                        <h1 class="mb-0">Calendario Preventivo</h1>
+                    </div>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover mb-0">
+                            <thead style="background-color: #bde0fe;">
+                                <tr>
+                                    <th scope="col" class="ps-4">Tipo de Cuidado</th>
+                                    <th scope="col">Frecuencia</th>
+                                    <th scope="col">¿Por qué es importante?</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="ps-4 fw-bold">Vacunación</td>
+                                    <td>Anual</td>
+                                    <td>Previene enfermedades graves como la rabia o el parvovirus.</td>
+                                </tr>
+                                <tr>
+                                    <td class="ps-4 fw-bold">Desparasitación</td>
+                                    <td>Cada 3 meses</td>
+                                    <td>Evita parásitos internos y externos (pulgas/garrapatas).</td>
+                                </tr>
+                                <tr>
+                                    <td class="ps-4 fw-bold">Higiene Dental</td>
+                                    <td>Semanal</td>
+                                    <td>Previene el sarro y el mal aliento en perros y gatos.</td>
+                                </tr>
+                                <tr>
+                                    <td class="ps-4 fw-bold">Revisión Veterinaria</td>
+                                    <td>Semestral</td>
+                                    <td>Detección temprana de cualquier anomalía de salud.</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-md-6">
+                <div class="p-4 rounded-4" style="background-color: #ffafcc; color: white;">
+                    <h1>Consejo de Nutrición</h1>
+                    <p>Evita darles comida humana. Algunos alimentos como el chocolate, la cebolla o las uvas son altamente tóxicos para ellos.</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="p-4 rounded-4" style="background-color: #bde0fe; color: #555;">
+                    <h1>Salud Mental</h1>
+                    <p>El juego diario y el ejercicio no solo los cansan, sino que reducen su ansiedad y mejoran su comportamiento en casa.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="text-center mt-5">
+            <a href="index.html" class="btn btn-lg rounded-pill px-4 shadow-sm" style="background-color: #cdb4db; color: white;">
+                ← Volver al Inicio
+            </a>
+        </div>
+    </main>
+
+    <footer class="text-center py-4 mt-5" style="background-color: #bde0fe;">
+        <p class="mb-0 text-secondary">© 2025 Proyecto Mascotas - Tu Nombre</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
