--- a/ProyectoBootstrap/index.html
+++ b/ProyectoBootstrap/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mascotas Felices - Inicio</title>
+    <title>Mascotas VIP - Bienvenidos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top shadow-sm" style="background-color: var(--pastel-blue);">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Mascotas VIP</a>
+            <a class="navbar-brand fw-bold" href="index.html">🐾 Mascotas VIP</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -27,19 +27,28 @@
         </div>
     </nav>
 
-    <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
+    <header id="heroCarousel" class="carousel slide carousel-fade carousel-dark" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/perro.jpg" class="d-block w-100" alt="Perro">
-                <div class="carousel-caption"><h3>Adopta un amigo</h3></div>
+                <img src="img/perro.jpg" class="d-block w-50 mx-auto mt-4 rounded-5 shadow zoom-mascota" alt="Perro">
+                <div class="carousel-caption d-none d-md-block text-white">
+                    <h3 class="fw-bold">Adopta un amigo</h3>
+                    <p>Cambia una vida hoy mismo.</p>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="img/gato.jpg" class="d-block w-100" alt="Gato">
-                <div class="carousel-caption"><h3>Compañeros leales</h3></div>
+                <img src="img/gato.jpg" class="d-block w-50 mx-auto mt-4 rounded-5 shadow zoom-mascota" alt="Gato">
+                <div class="carousel-caption d-none d-md-block text-white">
+                    <h3 class="fw-bold">Compañeros leales</h3>
+                    <p>Ellos siempre estarán ahí para ti.</p>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="img/pajaro.jpg" class="d-block w-100" alt="Pájaro">
-                <div class="carousel-caption"><h3>Cuidados especiales</h3></div>
+                <img src="img/pajaro.jpg" class="d-block w-50 mx-auto mt-4 rounded-5 shadow zoom-mascota" alt="Pájaro">
+                <div class="carousel-caption d-none d-md-block text-white">
+                    <h3 class="fw-bold">Cuidados especiales</h3>
+                    <p>Expertos en todas las especies.</p>
+                </div>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
@@ -48,12 +57,61 @@
         <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
             <span class="carousel-control-next-icon"></span>
         </button>
-    </div>
+    </header>
 
-    <main class="container my-5 fade-in">
-        <h1 class="text-center">Bienvenidos al Mundo de las Mascotas</h1>
-        <p class="text-center">Aquí encontrarás todo lo necesario para tus mejores amigos.</p>
+    <main class="container my-5 py-5 animar">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <h1 class="display-4 fw-bold">Bienvenidos al <span style="color: var(--pastel-pink);">Mundo Mascota</span></h1>
+                <p class="lead">No solo somos una web de información, somos una comunidad que ama a los animales tanto como tú.</p>
+                <a href="cuidados.html" class="btn btn-pastel shadow-sm">Ver Consejos</a>
+            </div>
+            <div class="col-md-6 text-center">
+                <img src="img/mascotas.jpg" alt="Mascotas" class="img-fluid rounded-4 shadow">
+            </div>
+        </div>
     </main>
+
+    <section class="py-5" style="background-color: #f1f8ff;">
+        <div class="container text-center">
+            <h2 class="mb-5 fw-bold animar">Nuestros Servicios</h2>
+            <div class="row g-4">
+                <div class="col-md-4 animar" style="animation-delay: 0.2s;">
+                    <div class="card h-100 card-hover shadow-sm p-4">
+                        <div class="fs-1">🦴</div>
+                        <h3 class="mt-3">Alimentación</h3>
+                        <p>Te enseñamos a elegir el mejor pienso para cada etapa de su vida.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 animar" style="animation-delay: 0.4s;">
+                    <div class="card h-100 card-hover shadow-sm p-4">
+                        <div class="fs-1">🏠</div>
+                        <h3 class="mt-3">Adopción</h3>
+                        <p>Conectamos animales que buscan hogar con familias responsables.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 animar" style="animation-delay: 0.6s;">
+                    <div class="card h-100 card-hover shadow-sm p-4">
+                        <div class="fs-1">🩺</div>
+                        <h3 class="mt-3">Salud</h3>
+                        <p>Calendarios de vacunación y guías de primeros auxilios.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container my-5 py-5 text-center animar">
+        <div class="p-5 rounded-5 shadow" style="background-color: var(--pastel-purple); color: white;">
+            <h2 class="fw-bold">¿Tienes dudas sobre tu mascota?</h2>
+            <p class="mb-4">Nuestro equipo de expertos está listo para ayudarte con cualquier consulta.</p>
+            <a href="contacto.html" class="btn btn-light btn-lg rounded-pill px-5 fw-bold" style="color: var(--pastel-purple);">Contactar Ahora</a>
+        </div>
+    </section>
+
+    <footer class="text-center py-4 mt-5" style="background-color: var(--pastel-blue);">
+        <p class="mb-0 text-secondary">© 2026 Proyecto Mascotas VIP - Creado con ❤️ y Bootstrap</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
